logout from the system
