# src/api/controllers/index.js
@@ -6,4 +6,4 @@ export * from './register.js';
 export * from './update.js';
 export * from './me.js';
 export * from './users.js';
-export * from './userAuth.js'
+export * from './auth.js'
